--- a/app/src/main/res/layout/place_view.xml
+++ b/app/src/main/res/layout/place_view.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@mipmap/threed"/>
+        android:src="@mipmap/emailphishing"/>
 
     <TextView
         android:id="@+id/placeName"
