--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -5,6 +5,44 @@
     android:layout_height="match_parent"
     tools:context="me.kristhecanadian.cyberhunt.ui.dashboard.DashboardFragment">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="98dp"
+        android:layout_height="95dp"
+        android:background="#FFFFFF"
+        android:src="@mipmap/collection_locked"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="98dp"
+        android:layout_height="95dp"
+        android:src="@mipmap/collection_locked"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="98dp"
+        android:layout_height="95dp"
+        android:background="#025AAF"
+        android:src="@drawable/c"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.099"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
+
     <TextView
         android:id="@+id/lets_go_exp"
         android:layout_width="160dp"
@@ -20,7 +58,7 @@
         app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.233" />
+        app:layout_constraintVertical_bias="0.185" />
 
     <TextView
         android:id="@+id/lets_go_exp2"
@@ -53,36 +91,42 @@
         android:id="@+id/imageView25"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
+        android:background="#0FB3EA"
+        android:src="@drawable/a"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.52"
+        />
 
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
+        android:background="#57EDFB"
+        android:src="@drawable/b"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+         />
 
     <ImageView
         android:id="@+id/imageView29"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
+        android:background="#E8504B"
+        android:src="@drawable/e"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        />
 
     <ImageView
         android:id="@+id/imageView30"
@@ -100,24 +144,28 @@
         android:id="@+id/imageView31"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
+        android:background="#12E3CA"
+        android:src="@drawable/hi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintVertical_bias="0.88"
+        />
 
     <ImageView
         android:id="@+id/imageView32"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
+        android:background="#FA7979"
+        android:src="@drawable/f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintVertical_bias="0.88"
+         />
 
     <ImageView
         android:id="@+id/imageView33"
@@ -130,17 +178,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.88" />
-
-    <ImageView
-        android:id="@+id/imageView26"
-        android:layout_width="98dp"
-        android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
 
     <ImageView
         android:id="@+id/imageView27"
@@ -161,21 +198,10 @@
         android:src="@mipmap/collection_locked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.89"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32999998" />
-
-    <ImageView
-        android:id="@+id/imageView24"
-        android:layout_width="98dp"
-        android:layout_height="95dp"
-        android:src="@mipmap/collection_locked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32999998" />
+        app:layout_constraintVertical_bias="0.278" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
