--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -34,7 +34,7 @@
         android:id="@+id/imageView2"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#025AAF"
+        android:background="#025EB6"
         android:src="@drawable/c"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,42 +91,39 @@
         android:id="@+id/imageView25"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#0FB3EA"
+        android:background="#3894ED"
         android:src="@drawable/a"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52"
-        />
+        app:layout_constraintVertical_bias="0.52" />
 
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#57EDFB"
+        android:background="#3894ED"
         android:src="@drawable/b"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
-         />
+        app:layout_constraintVertical_bias="0.7" />
 
     <ImageView
         android:id="@+id/imageView29"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#E8504B"
+        android:background="#CD4D4D"
         android:src="@drawable/e"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
-        />
+        app:layout_constraintVertical_bias="0.7" />
 
     <ImageView
         android:id="@+id/imageView30"
@@ -144,28 +141,26 @@
         android:id="@+id/imageView31"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#12E3CA"
+        android:background="#3894ED"
         android:src="@drawable/hi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
-        />
+        app:layout_constraintVertical_bias="0.88" />
 
     <ImageView
         android:id="@+id/imageView32"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#FA7979"
+        android:background="#CD4D4D"
         android:src="@drawable/f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
-         />
+        app:layout_constraintVertical_bias="0.88" />
 
     <ImageView
         android:id="@+id/imageView33"
