--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -16,7 +16,8 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.278" />
+        app:layout_constraintVertical_bias="0.278"
+        app:srcCompat="@drawable/key1" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -28,20 +29,21 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.52"
+        app:srcCompat="@drawable/key4" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#025EB6"
-        android:src="@drawable/c"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.278" />
+        app:layout_constraintVertical_bias="0.278"
+        app:srcCompat="@drawable/fish2" />
 
     <TextView
         android:id="@+id/lets_go_exp"
@@ -91,39 +93,39 @@
         android:id="@+id/imageView25"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#3894ED"
-        android:src="@drawable/a"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.52"
+        app:srcCompat="@drawable/fish4" />
 
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#3894ED"
-        android:src="@drawable/b"
+        android:background="#FFFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        app:srcCompat="@drawable/fish3" />
 
     <ImageView
         android:id="@+id/imageView29"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#CD4D4D"
-        android:src="@drawable/e"
+        android:background="#FFFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        app:srcCompat="@drawable/key3" />
 
     <ImageView
         android:id="@+id/imageView30"
@@ -141,26 +143,26 @@
         android:id="@+id/imageView31"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#3894ED"
-        android:src="@drawable/hi"
+        android:background="#FFFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintVertical_bias="0.88"
+        app:srcCompat="@drawable/fish1" />
 
     <ImageView
         android:id="@+id/imageView32"
         android:layout_width="98dp"
         android:layout_height="95dp"
-        android:background="#CD4D4D"
-        android:src="@drawable/f"
+        android:background="#FFFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintVertical_bias="0.88"
+        app:srcCompat="@drawable/key2" />
 
     <ImageView
         android:id="@+id/imageView33"
